--- a/main-page.html
+++ b/main-page.html
@@ -6,27 +6,29 @@
 </head>
 
 <body>
-
 <div class="header">
 	<div class="navbar" id="nav">
 		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Menu</li>
-			<li>Orders</li>
 			<li>Contact Us</li>
+			<li>Orders</li>
+			<li>Menu</li>
+			<li>About</li>
+			<li>Home</li>
 		</ul>
+	</div>
+	
+	<div class="box">
+		
 	</div>
 </div>
 
-<div class="box"></div>
 
 <!-- javascript code -->
 
 <script type="text/javascript">
 	var nav = document.getElementsById('nav');
 	
-	window.scroll = function(){
+	window.onscroll = function(){
 		if(window.pageYOffset > 100) {
 			nav.style.background = "#007bff";
 			nav.style.boxShadow = "0px 4px 2px blue";
@@ -65,26 +67,27 @@
 	}
 	
 	.navbar ul li{
+		float: right;
 		list-style-type: none;
 		display: inline-block;
 		padding: 10px 50px;
-		color: black;
+		color: white;
 		font-size: 24px;
-		font-family: sans-serif;
+		font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
+		font-weight: bold;
 		cursor: pointer;
 		border-radius: 10px;
 		transition: .5s;
 	}
 	
 	.navbar ul li:hover{
-		background: yellow;
+		background: #F8A22F;
 	}
 	
 	.box{
-		width: 80%;
-		height: 2000px;
-		background: orange;
-		margin: 20px auto;
+		width: 100%;
+		height: 8000px;
+		background: #EEEEEE;
 	}
 </style>
 </body>
