--- a/main-page.html
+++ b/main-page.html
@@ -1,94 +1,37 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
 <meta charset="utf-8">
 <title>Main Page</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-<div class="header">
-	<div class="navbar" id="nav">
-		<ul>
-			<li>Contact Us</li>
-			<li>Orders</li>
-			<li>Menu</li>
-			<li>About</li>
-			<li>Home</li>
+<header>
+	<div class="logo_container">
+		<h1>EINSTEIN BROS <span>TO-GO</span></h1>
+	</div>
+	<div class="inner_header">
+		<ul class="nav">
+			<a href="#" title="Home Page"><li>Home</li></a>
+			<a href="about.html" title="About Page"><li>About</li></a>
+			<a href="menu.html" title="View Menu"><li>Menu</li></a>
+			<a href="orders.html" title="View Orders"><li>Orders</li></a>
+			<a href="contact.html" title="Contact Us"><li>Contact</li></a>
 		</ul>
 	</div>
-	
-	<div class="box">
-		
-	</div>
-</div>
+</header>
 
-
-<!-- javascript code -->
-
-<script type="text/javascript">
-	var nav = document.getElementsById('nav');
+<main>
 	
-	window.onscroll = function(){
-		if(window.pageYOffset > 100) {
-			nav.style.background = "#007bff";
-			nav.style.boxShadow = "0px 4px 2px blue";
-		}
-		else{
-			nav.style.background = "transparent";
-			nav.style.boxShadow = "none";
-		}
-	}
-</script>
+</main>
 
+<aside>
+	aside
+</aside>
 
-<!-- add css style -->
-
-
-<style type="text/css">
-	*{
-		padding: 0px;
-		margin: 0px;
-		box-sizing: border-box;
-	}
-	
-	.header{
-		width: 100%;
-		height: 1000px;
-		background-image: url(back.jpg);
-		background-size: cover;
-	}
-	
-	.navbar{
-		width: 100%;
-		padding: 20px;
-		position: fixed;
-		top: 0px;
-		transition: .5s;
-	}
-	
-	.navbar ul li{
-		float: right;
-		list-style-type: none;
-		display: inline-block;
-		padding: 10px 50px;
-		color: white;
-		font-size: 24px;
-		font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-		font-weight: bold;
-		cursor: pointer;
-		border-radius: 10px;
-		transition: .5s;
-	}
-	
-	.navbar ul li:hover{
-		background: #F8A22F;
-	}
-	
-	.box{
-		width: 100%;
-		height: 8000px;
-		background: #EEEEEE;
-	}
-</style>
+<footer>
+	Copyright and Contact
+</footer>
 </body>
 </html>
