Added buttons Changed up the css file to go more with the concept design Added media links

--- a/main-page.html
+++ b/main-page.html
@@ -9,7 +9,7 @@
 <body>
 <header id="nav">
 	<div class="logo_container">
-		<a href="#"><img src="images/logo.png"></a>
+		<a href="#"><img src="images/logo.png" alt="Logo"></a>
 		<a href="#"><h1>EINSTEIN BROS <span>TO-GO</span></h1></a>
 	</div>
 	<div class="inner_header">
@@ -25,14 +25,50 @@
 <main>
 	<h1><br />Have no time <br />to prepare <span>food</span>?</h1>
 	<p>Choose one of our bagels, enter the proposed pick-up time and enjoy delicious food without leaving your home!</p>
+	<div class="landing">
+		<table>
+			<tr>
+				<td><p>First time ordering? Order below:</p></td>
+				<td><p>Already ordered? Log in to check your order:</p></td>
+			</tr>
+			<tr>
+				<td><button class="order" type="button" onClick="location.href='orders.html';">Order Food</button></td>
+				<td><button class="order" type="button" onClick="location.href='login.html';">Log In</button></td>
+			</tr>
+		</table>
+	</div>
 </main>
 
 <aside>
-	aside
 </aside>
 
 <footer>
-	Copyright and Contact
+	<div class="name_container">
+		<h1>EINSTEIN BROS <span>TO-GO</span></h1>
+	</div>
+	<div class="inner_footer">
+		<ul class="footer">
+			<li style="font-weight: bold">Contact</li>
+			<li>4700 Research Way</li>
+			<li>Lakeland, Florida, USA</li>
+			<li>Telephone: +1 863-455-5555</li>
+			<li>E-Mail: reinsteinstogo@live.com</li>
+		</ul>
+		<ul class="footer">
+			<li style="font-weight: bold">Follow Us</li>
+			<li>
+				<table>
+					<tr>
+						<td><a href="#"><img src="images/facebook.png" alt="Facebook"></a></td>
+						<td><a href="#"><img src="images/twitter.png" alt="Twitter"></a></td>
+						<td><a href="#"><img src="images/insta.png" alt="Instagram"></a></td>
+					</tr>
+				</table>
+			</li>
+		</ul>
+	</div>
+	<div class="rectangle"></div>
+	<p class="copyright">&copy All Rights Reserved</p>
 </footer>
 </body>
 </html>
