added database files as well as organized folder

--- a/server/index.html
+++ b/server/index.html
@@ -68,7 +68,7 @@
 		</ul>
 	</div>
 	<div class="rectangle"></div>
-	<p class="copyright">&copy All Rights Reserved</p>
+	<p class="copyright">&copy; All Rights Reserved</p>
 </footer>
 </body>
 </html>
